(22nd April 2002)
 - Small conversion bug in ma_movement.c

1.1.0 (19th April 2002)

(18th April 2002)
Added the following commands:
- unstart
- set secret
- set [prflist|prfrand|prfboth]

Fixed Set Absence so that "to" is not case sensitive

Fixed Quiet games so that new players are announced
before the game starts

Fixed ascii_to_ded.c so thatit no longer generates an
error when compiled
(15th April 2002)
 - Many changes from USTV, inluding blind, railways/hongkong/gateways
   and initial setup option
(9th April 2002)
 - Small change to dip.c to avoid repeated abandoned messages
(6th April 2002)
 - Fixed dip.c to not process build turns without waiting
 - Small fix to ml_short.c to add space after province and allow "prov" 

1.0.3 (1st April 2002)
Next release version with small bug-fixes 
(25th March 2002)
 - Fixed Machivalli bug for ownership in ma_porder.c
(20th March 2002)
 - Corrected Classical to be a ONECENTRE game in variant.h
(10th March 2002)
 - Added automatic wait in build_transform games for build phases in dip.c
(5th March 2002) :
 - Corrected problem in summary.c (preventing Machiavelli summaries)
 - Fixed beleagured garrison bug in st/ma_movement.c

1.0.2 (25th February 2002) :
 - Added in new Mach fixes (correct Venice problem, assorted fixes)
 - Added STORMS flag for Machiavelli games (Millis Miller)
 - Added NOMONEY setting for Machiavelli (basic rules, Millis Miller)
 - fixed the bug that was reported in plyrdata.c (Tim Miller)
 - added some concession handling code into summary.c that was there before
 but must have gotten lost during one of the upgrades (Tim Miller)
 - fix that will allow players in Ancient Med games to phase
 orders.(Tim Miller)
 - documentation reorganization and cleaning (Christophe Courtois)


1.0.0 (29th Dec. 2001) : First stable official 1.x judge release

-----
(Following comes from former file data/log)


Version 1.0 DCK - Moved sources from u.washington.edu to morrolan.eff.org