@@ -1,3 +1,5 @@
+(23rd April)
+ - Spelling fix "Svmebody" -> "Somebody" in summary.c
 (22nd April 2002)
  - Small conversion bug in ma_movement.c
 
